# Silensis

./: .gitignore  Anchor.toml  LICENSE  README.md
.claude/: settings.local.json
app/: package-lock.json  package.json  tailwind.config.ts
app/scripts/: export-keypair-base58.ts  price-keeper.ts  setup-localnet.ts
app/src/app/: globals.css  layout.tsx  page.tsx  providers.tsx
app/src/components/account/: AccountPanel.tsx  BalanceCard.tsx  DepositForm.tsx  WithdrawForm.tsx
app/src/components/admin/: AdminPanel.tsx
app/src/components/layout/: Navbar.tsx
app/src/hooks/: useAllPositions.ts  useApplyFunding.ts  useClosePosition.ts  useDeposit.ts  useGlobalState.ts  useLiquidate.ts  useOpenPosition.ts  usePositions.ts  usePriceFeed.ts  useProgram.ts  useSetPrice.ts  useUserVault.ts  useWithdraw.ts
app/src/idl/: mini_perps.json  mini_perps.ts
app/src/lib/: LocalKeypairWalletAdapter.ts  anchor.ts  calculations.ts  confirm.ts  constants.ts  errors.ts  formatting.ts  pdas.ts
app/src/types/: index.ts
programs/mini-perps/: Cargo.toml
programs/mini-perps/src/: lib.rs
programs/mini-perps/src/instructions/: apply_funding.rs  close_position.rs  liquidate.rs  set_price.rs  withdraw.rs
programs/mini-perps/src/state/: global.rs  mod.rs
programs/silensis/: Cargo.toml
programs/silensis/src/: constants.rs  errors.rs  lib.rs
programs/silensis/src/instructions/: deposit.rs  initialize.rs  mod.rs  open_position.rs  withdraw.rs
programs/silensis/src/math/: fixed_point.rs
programs/silensis/src/state/: position.rs  vault.rs
tests/: mini-perps.ts  silensis.ts
(+18 files in other folders)
