[package]
name = "mini-perps"
version = "0.1.0"
description = "Perpetual futures DEX on Solana"
edition = "2021"
license = "MIT"

[lib]
crate-type = ["cdylib", "lib"]
name = "mini_perps"

[features]
default = []
cpi = ["no-entrypoint"]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
idl-build = ["anchor-lang/idl-build", "anchor-spl/idl-build"]
anchor-debug = []
custom-heap = []
custom-panic = []

[dependencies]
anchor-lang = "0.32.1"
anchor-spl = "0.32.1"
pyth-solana-receiver-sdk = "0.5.0"

[lints.rust]
unexpected_cfgs = { level = "warn", check-cfg = ['cfg(target_os, values("solana"))'] }
